--- a/annotation/Testing.ipynb
+++ b/annotation/Testing.ipynb
@@ -93,12 +93,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          1    2      3      4              5                6  \\\n",
+      "0  87009444  NaN      C      T       ATP6V0D2  ENSG00000147614   \n",
+      "1  87024204  NaN  ATGTG  ATGTA  RP11-216N21.1  ENSG00000227753   \n",
+      "2  87024204  NaN  ATGTG  ATGTA       ATP6V0D2  ENSG00000147614   \n",
+      "3  87025089  NaN      A      C  RP11-216N21.1  ENSG00000227753   \n",
+      "4  87025089  NaN      A      C       ATP6V0D2  ENSG00000147614   \n",
+      "\n",
+      "                       7         8           9               10  \\\n",
+      "0         intron_variant  MODIFIER  transcript  ENST00000521564   \n",
+      "1  upstream_gene_variant  MODIFIER  transcript  ENST00000493084   \n",
+      "2         intron_variant  MODIFIER  transcript  ENST00000521564   \n",
+      "3  upstream_gene_variant  MODIFIER  transcript  ENST00000493084   \n",
+      "4         intron_variant  MODIFIER  transcript  ENST00000521564   \n",
+      "\n",
+      "                     11  12  0  pos_block  \n",
+      "0        protein_coding   1  8  87.009444  \n",
+      "1  processed_pseudogene  -1  8  87.024204  \n",
+      "2        protein_coding   1  8  87.024204  \n",
+      "3  processed_pseudogene  -1  8  87.025089  \n",
+      "4        protein_coding   1  8  87.025089  \n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in os.listdir(os.getcwd()):\n",
+    "    if file.endswith('_parsed.tsv'):\n",
+    "        final_df = pd.read_csv(file, sep='\\t', skiprows=1, header=None)\n",
+    "        final_df= final_df[[1, 2,3,4,5,6,7,8,9,10,11,12,0]]\n",
+    "        final_df['pos_block'] = final_df[1].div(1000000)\n",
+    "        print final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for num in range(1,101):\n",
+    "    if (num % 5 == 0) and (num % 3 == 0):\n",
+    "        print 'FizzBuzz'\n",
+    "    elif (num % 3 == 0):\n",
+    "        print 'Fizz'\n",
+    "    elif (num % 5 == 0):\n",
+    "        print 'Buzz'\n",
+    "    else: \n",
+    "        print num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n-2) + fibonacci(n-1)\n",
+    "        \n",
+    "print fibonacci(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ghequickbrownfoxjumpedoverthelazydot\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string = \"thequickbrownfoxjumpedoverthelazydog\"\n",
+    "\n",
+    "# switch first and last letters in a string\n",
+    "print my_string[-1] + my_string[1:-1] + my_string[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teucbonojmeoeteayo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove every other letter\n",
+    "print my_string[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quickbrownfoxjumpedoverthelazy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove first and last four items\n",
+    "print my_string[3:-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "godyzalehtrevodepmujxofnworbkciuqeht\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reverse string\n",
+    "print my_string[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thequickbrow\n"
+     ]
+    }
+   ],
+   "source": [
+    "print my_string[len(my_string)/3:] my_string[0:len(my_string)/3]"
+   ]
   },
   {
    "cell_type": "code",
